--- a/src/renaming-script.ipynb
+++ b/src/renaming-script.ipynb
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "EXCEL_PATH = r\"PATH_TO_YOUR_EXCEL_FILE.xlsx\" # Replace with the actual path to your Excel file\n",
-    "rm_df = pd.read_excel(EXCEL_PATH, sheet_name=\"Vendor List\", header=1) # Enter actual sheet name, change header to 0"
+    "rm_df = pd.read_excel(EXCEL_PATH, sheet_name=\"Vendor List\", header=1) # Enter actual sheet name, change header to 0 if the first row is the header"
    ]
   },
   {
@@ -56,7 +56,7 @@
    "id": "86be65bf",
    "metadata": {},
    "source": [
-    "Utility Functions (Shared)"
+    "Shared Utility Functions"
    ]
   },
   {
@@ -69,7 +69,7 @@
     "def get_initials(full_name):\n",
     "    return ''.join([part[0].upper() for part in str(full_name).split() if part])\n",
     "\n",
-    "def get_rm_initials(company_name):\n",
+    "def get_rm_initials(company_name): \n",
     "    row = rm_df[rm_df['Vendor Name'].str.lower() == company_name.lower()]\n",
     "    if not row.empty:\n",
     "        rm_name = row.iloc[0]['Relationship Manager']\n",
