--- a/src/renaming-script.ipynb
+++ b/src/renaming-script.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9ad22251",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "EXCEL_PATH = r\"PATH_TO_YOUR_EXCEL_FILE.xlsx\" # Replace with the actual path to your Excel file\n",
-    "rm_df = pd.read_excel(EXCEL_PATH, sheet_name=\"Vendor List\", header=1) # Enter actual sheet name, change header to 0 if the first row is the header"
+    "rm_df = pd.read_excel(EXCEL_PATH, sheet_name=\"Sheet Name\", header=1) # Enter actual sheet name, change header to 0 if the first row is the header"
    ]
   },
   {
@@ -56,12 +56,12 @@
    "id": "86be65bf",
    "metadata": {},
    "source": [
-    "Shared Utility Functions"
+    "Shared Utility Functions. Make sure the parameter names line up with how you format the excel file:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3975a907",
    "metadata": {},
    "outputs": [],
@@ -80,54 +80,29 @@
     "    timestamp = os.path.getmtime(filepath)\n",
     "    return datetime.fromtimestamp(timestamp).strftime('%Y%m%d')\n",
     "\n",
-    "def detect_doc_type(filename):  \n",
+    "def detect_doc_type(filename):  # if loops are in order of specificity to generality\n",
     "    name = filename.lower()\n",
-    "    if \"amendment\" in name or \"amdt\" in name:\n",
-    "        return \"Amdt\"\n",
-    "    elif \"royalty\" in name or \"statement\" in name:\n",
-    "        return \"Royalty Statement\"\n",
-    "    elif \"reminder\" in name or \"reminder letter\" in name or \"annual reminder\" in name:\n",
-    "        return \"Annual Reminder Letter\"\n",
-    "    elif \"annual\" in name or \"annual letter\" in name:\n",
-    "        return \"Annual Letter\"\n",
-    "    elif \"annex a\" in name or \"annex_a\" in name:\n",
-    "        return \"Annex A\"\n",
-    "    elif \"annex b\" in name or \"annex_b\" in name:\n",
-    "        return \"Annex B\"\n",
-    "    elif \"annex c\" in name or \"annex_c\" in name:\n",
-    "        return \"Annex C\"\n",
-    "    elif \"annex d\" in name or \"annex_d\" in name:\n",
-    "        return \"Annex D\"\n",
-    "    elif \"annex\" in name:\n",
-    "        return \"Annex\"\n",
-    "    elif \"isonet setup memo\" in name or \"isonet\" in name or \"setup memo\" in name or \"setup\" in name:\n",
-    "        return \"ISOnet Setup Memo\"\n",
-    "    elif \"proposal\" in name:\n",
-    "        return \"Proposal\"\n",
-    "    elif \"non disclosure agreement\" in name or \"disclosure agreement\" in name or \"nda\" in name:\n",
-    "        return \"NDA\"\n",
-    "    elif \"vsa\" in name or \"verisk strategic alliance agreement\" in name:\n",
-    "        return \"VSAL\"\n",
-    "    elif \"agreement\" in name or \"agrmt\" in name:\n",
-    "        return \"Agrmt\"\n",
-    "    elif \"model\" in name or \"ramp up model\" in name:\n",
-    "        return \"Pricing Proposal\"\n",
+    "    if \"a\" in name or \"b\" in name:\n",
+    "        return \"c\"\n",
+    "    elif \"d\" in name or \"e\" in name:\n",
+    "        return \"f\"\n",
+    "    # ... Add more specific checks as needed\n",
     "    else:\n",
-    "        return \"Other\"\n",
+    "        return \"g\" # Default case\n",
     "\n",
     "def guess_vendor_from_filename_or_ird(filename, vendor_list, ird_list):\n",
     "    base = os.path.splitext(os.path.basename(filename))[0]\n",
-    "    # Regex for IRD: optional apostrophe, 4 digits, optional letter, optional apostrophe, e.g. '5097', '5097A', 5097A, etc.\n",
-    "    ird_match = re.search(r\"'?\\s*(\\d{4}[A-Za-z]?)\\s*'?\", base)\n",
-    "    if ird_match:\n",
-    "        ird_candidate = ird_match.group(1)\n",
-    "        # Try to match IRD in DataFrame (case-insensitive, strip spaces)\n",
-    "        row = rm_df[rm_df['Ird Id'].astype(str).str.replace(\"'\", \"\").str.strip().str.lower() == ird_candidate.lower()]\n",
+    "    # Regex for ID: optional apostrophe, 4 digits, optional letter, optional apostrophe, e.g. '5097', '5097A', 5097A, etc.\n",
+    "    id_match = re.search(r\"'?\\s*(\\d{4}[A-Za-z]?)\\s*'?\", base)\n",
+    "    if id_match:\n",
+    "        ird_candidate = id_match.group(1)\n",
+    "        # Try to match ID in DataFrame (case-insensitive, strip spaces)\n",
+    "        row = rm_df[rm_df['Id'].astype(str).str.replace(\"'\", \"\").str.strip().str.lower() == ird_candidate.lower()]\n",
     "        if not row.empty:\n",
     "            return row.iloc[0]['Vendor Name']\n",
     "    # Fallback: vendor name guessing\n",
     "    words = re.split(r'[\\s\\-_\\.]+', base)\n",
-    "    ignore = {'verisk strategic alliance agreement', 'annex', 'draft', 'revised', 'agreement', 'amendment', 'letter', 'reminder', 'setup', 'memo', 'final', 'executed', 'signed', 'vsa', 'iso', 'llc', 'inc', 'corp', 'company', 'co', 'the', 'of', 'and', 'a', 'b', 'c', 'proposal', 'forms', 'rules', 'loss', 'costs', 'business', 'development', 'tm', 'drafts',}\n",
+    "    ignore = {'words'} # Add common legal/document type words that might skew guessing\n",
     "    vendor_guess = ' '.join([w for w in words if w.lower() not in ignore and not w.isdigit() and not re.match(r'\\d{4}', w)])\n",
     "    match = process.extractOne(vendor_guess, vendor_list, score_cutoff=60)\n",
     "    return match[0] if match else None"
@@ -158,15 +133,15 @@
    "source": [
     "def build_draft_filename_auto(filepath):\n",
     "    vendor_names = rm_df['Vendor Name'].tolist()\n",
-    "    ird_list = rm_df['Ird Id'].astype(str).tolist()\n",
+    "    ird_list = rm_df['Id'].astype(str).tolist()\n",
     "    guessed_vendor = guess_vendor_from_filename_or_ird(os.path.basename(filepath), vendor_names, ird_list)\n",
     "    if guessed_vendor is None:\n",
     "        guessed_vendor = \"UnknownVendor\"\n",
     "    draft_date = get_last_modified_date(filepath)\n",
     "    doc_type = detect_doc_type(os.path.basename(filepath))\n",
     "    rm_initials = get_rm_initials(guessed_vendor)\n",
-    "    return f\"{draft_date}-ISO-{guessed_vendor}-{doc_type}-{rm_initials}\"\n",
-    "filepath = r\"\" #path to your file\n",
+    "    return f\"{draft_date}-My Company Name-{guessed_vendor}-{doc_type}-{rm_initials}\" # Alter this format as needed.\n",
+    "filepath = r\"\" #path to your file you'd like to rename\n",
     "new_name = build_draft_filename_auto(filepath)\n",
     "print(new_name)"
    ]
