--- a/src/renaming-script.ipynb
+++ b/src/renaming-script.ipynb
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "EXCEL_PATH = r\"PATH_TO_YOUR_EXCEL_FILE.xlsx\" # Replace with the actual path to your Excel file\n",
-    "rm_df = pd.read_excel(EXCEL_PATH, sheet_name=\"Sheet Name\", header=1) # Enter actual sheet name, change header to 0 if the first row is the header"
+    "rm_df = pd.read_excel(EXCEL_PATH, sheet_name=\"test_spreadsheet\", header=1) # Enter actual sheet name, change header to 0 if the first row is the header"
    ]
   },
   {
@@ -56,12 +56,12 @@
    "id": "86be65bf",
    "metadata": {},
    "source": [
-    "Shared Utility Functions. Make sure the parameter names line up with how you format the excel file:"
+    "Shared Utility Functions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3975a907",
    "metadata": {},
    "outputs": [],
@@ -69,11 +69,11 @@
     "def get_initials(full_name):\n",
     "    return ''.join([part[0].upper() for part in str(full_name).split() if part])\n",
     "\n",
-    "def get_rm_initials(company_name): \n",
-    "    row = rm_df[rm_df['Vendor Name'].str.lower() == company_name.lower()]\n",
+    "def get_owner_initials(company_name): \n",
+    "    row = owner_df[rm_owner['Vendor'].str.lower() == company_name.lower()]\n",
     "    if not row.empty:\n",
-    "        rm_name = row.iloc[0]['Relationship Manager']\n",
-    "        return get_initials(rm_name)\n",
+    "        owner_name = row.iloc[0]['Owner']\n",
+    "        return get_initials(owner_name)\n",
     "    return 'XX'\n",
     "\n",
     "def get_last_modified_date(filepath):\n",
@@ -82,27 +82,27 @@
     "\n",
     "def detect_doc_type(filename):  # if loops are in order of specificity to generality\n",
     "    name = filename.lower()\n",
-    "    if \"a\" in name or \"b\" in name:\n",
-    "        return \"c\"\n",
-    "    elif \"d\" in name or \"e\" in name:\n",
-    "        return \"f\"\n",
+    "    if \"legal_a\" in name or \"legal_a\" in name:\n",
+    "        return \"Legal Document A\"\n",
+    "    elif \"legal\" in name or \"legal document\" in name:\n",
+    "        return \"Legal Document\"\n",
     "    # ... Add more specific checks as needed\n",
     "    else:\n",
-    "        return \"g\" # Default case\n",
+    "        return \"Other\" # Default case\n",
     "\n",
-    "def guess_vendor_from_filename_or_ird(filename, vendor_list, ird_list):\n",
+    "def guess_vendor_from_filename_or_id(filename, vendor_list, id_list):\n",
     "    base = os.path.splitext(os.path.basename(filename))[0]\n",
     "    # Regex for ID: optional apostrophe, 4 digits, optional letter, optional apostrophe, e.g. '5097', '5097A', 5097A, etc.\n",
     "    id_match = re.search(r\"'?\\s*(\\d{4}[A-Za-z]?)\\s*'?\", base)\n",
     "    if id_match:\n",
-    "        ird_candidate = id_match.group(1)\n",
+    "        id_candidate = id_match.group(1)\n",
     "        # Try to match ID in DataFrame (case-insensitive, strip spaces)\n",
-    "        row = rm_df[rm_df['Id'].astype(str).str.replace(\"'\", \"\").str.strip().str.lower() == ird_candidate.lower()]\n",
+    "        row = owner_df[owner_df['Id'].astype(str).str.replace(\"'\", \"\").str.strip().str.lower() == id_candidate.lower()]\n",
     "        if not row.empty:\n",
-    "            return row.iloc[0]['Vendor Name']\n",
+    "            return row.iloc[0]['Vendor']\n",
     "    # Fallback: vendor name guessing\n",
     "    words = re.split(r'[\\s\\-_\\.]+', base)\n",
-    "    ignore = {'words'} # Add common legal/document type words that might skew guessing\n",
+    "    ignore = {'inc','ltd','legal'} # Add common legal/document type words that might skew guessing\n",
     "    vendor_guess = ' '.join([w for w in words if w.lower() not in ignore and not w.isdigit() and not re.match(r'\\d{4}', w)])\n",
     "    match = process.extractOne(vendor_guess, vendor_list, score_cutoff=60)\n",
     "    return match[0] if match else None"
@@ -133,14 +133,14 @@
    "source": [
     "def build_draft_filename_auto(filepath):\n",
     "    vendor_names = rm_df['Vendor Name'].tolist()\n",
-    "    ird_list = rm_df['Id'].astype(str).tolist()\n",
-    "    guessed_vendor = guess_vendor_from_filename_or_ird(os.path.basename(filepath), vendor_names, ird_list)\n",
+    "    id_list = rm_df['Id'].astype(str).tolist()\n",
+    "    guessed_vendor = guess_vendor_from_filename_or_id(os.path.basename(filepath), vendor_names, id_list)\n",
     "    if guessed_vendor is None:\n",
     "        guessed_vendor = \"UnknownVendor\"\n",
     "    draft_date = get_last_modified_date(filepath)\n",
     "    doc_type = detect_doc_type(os.path.basename(filepath))\n",
     "    rm_initials = get_rm_initials(guessed_vendor)\n",
-    "    return f\"{draft_date}-My Company Name-{guessed_vendor}-{doc_type}-{rm_initials}\" # Alter this format as needed.\n",
+    "    return f\"{draft_date}-ABC-{guessed_vendor}-{doc_type}-{rm_initials}\" # Alter this format as needed.\n",
     "filepath = r\"\" #path to your file you'd like to rename\n",
     "new_name = build_draft_filename_auto(filepath)\n",
     "print(new_name)"
@@ -293,15 +293,15 @@
     "def build_executed_filename_auto(filepath):\n",
     "    \"\"\"Build filename for executed documents\"\"\"\n",
     "    vendor_names = rm_df['Vendor Name'].tolist()\n",
-    "    ird_list = rm_df['Ird Id'].astype(str).tolist()\n",
-    "    guessed_vendor = guess_vendor_from_filename_or_ird(\n",
-    "        os.path.basename(filepath), vendor_names, ird_list\n",
+    "    id_list = rm_df['Id'].astype(str).tolist()\n",
+    "    guessed_vendor = guess_vendor_from_filename_or_id(\n",
+    "        os.path.basename(filepath), vendor_names, id_list\n",
     "    )\n",
     "    if guessed_vendor is None:\n",
     "        guessed_vendor = \"UnknownVendor\"\n",
     "    eff_date = select_pdf_date_for_naming(filepath)\n",
     "    doc_type = detect_doc_type(os.path.basename(filepath))\n",
-    "    return f\"{eff_date}-ISO-{guessed_vendor}-{doc_type}\"\n",
+    "    return f\"{eff_date}-ABC-{guessed_vendor}-{doc_type}\"\n",
     "\n",
     "pdf_path = r\"\" #Path to your PDF file\n",
     "new_pdf_name = build_executed_filename_auto(pdf_path)\n",
