--- a/src/renaming-script.ipynb
+++ b/src/renaming-script.ipynb
@@ -42,13 +42,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f64a93fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "EXCEL_PATH = r\"PATH_TO_YOUR_EXCEL_FILE.xlsx\" # Replace with the actual path to your Excel file\n",
-    "rm_df = pd.read_excel(EXCEL_PATH, sheet_name=\"test_spreadsheet\", header=1) # Enter actual sheet name, change header to 0 if the first row is the header"
+    "EXCEL_PATH = r\"C:\\Users\\I1000928\\Projects\\smart-document-renamer\\tests\\test_vendor_document.xlsx\" # Replace with the actual path to your Excel file\n",
+    "owner_df = pd.read_excel(EXCEL_PATH, sheet_name=\"test_spreadsheet\", header=1) # Enter actual sheet name, change header to 0 if the first row is the header"
    ]
   },
   {
@@ -70,7 +70,7 @@
     "    return ''.join([part[0].upper() for part in str(full_name).split() if part])\n",
     "\n",
     "def get_owner_initials(company_name): \n",
-    "    row = owner_df[rm_owner['Vendor'].str.lower() == company_name.lower()]\n",
+    "    row = owner_df[owner_df['Vendor'].str.lower() == company_name.lower()]\n",
     "    if not row.empty:\n",
     "        owner_name = row.iloc[0]['Owner']\n",
     "        return get_initials(owner_name)\n",
@@ -121,26 +121,18 @@
    "execution_count": null,
    "id": "cb749ae2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20240909-ISO-UnknownVendor-VSAL-XX\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def build_draft_filename_auto(filepath):\n",
-    "    vendor_names = rm_df['Vendor Name'].tolist()\n",
-    "    id_list = rm_df['Id'].astype(str).tolist()\n",
+    "    vendor_names = owner_df['Vendor'].tolist()\n",
+    "    id_list = owner_df['Id'].astype(str).tolist()\n",
     "    guessed_vendor = guess_vendor_from_filename_or_id(os.path.basename(filepath), vendor_names, id_list)\n",
     "    if guessed_vendor is None:\n",
     "        guessed_vendor = \"UnknownVendor\"\n",
     "    draft_date = get_last_modified_date(filepath)\n",
     "    doc_type = detect_doc_type(os.path.basename(filepath))\n",
-    "    rm_initials = get_rm_initials(guessed_vendor)\n",
-    "    return f\"{draft_date}-ABC-{guessed_vendor}-{doc_type}-{rm_initials}\" # Alter this format as needed.\n",
+    "    owner_initials = get_owner_initials(guessed_vendor)\n",
+    "    return f\"{draft_date}-ABC-{guessed_vendor}-{doc_type}-{owner_initials}\" # Alter this format as needed.\n",
     "filepath = r\"\" #path to your file you'd like to rename\n",
     "new_name = build_draft_filename_auto(filepath)\n",
     "print(new_name)"
@@ -159,18 +151,7 @@
    "execution_count": null,
    "id": "200fd8d8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Debug - Doc type: VSAL\n",
-      "Debug - First 200 chars: Ed. 12/2023 1 VERISK STRATEGIC ALLIANCES LICENSE AGREEMENT, including all Annexes attached hereto (the \"Agreement \"), dated August 27, 2024, between Insurance Services Office, Inc., with its principal\n",
-      "Debug - Fallback date selected: 2024-08-27 00:00:00\n",
-      "Generated filename: 20240827-ISO-UnknownVendor-VSAL\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Extracting potential date strings with more specific formats\n",
     "def extract_date_strings(text):\n",
@@ -248,12 +229,12 @@
     "            print(f\"Debug - Doc type: {doc_type}\")\n",
     "            print(f\"Debug - First 200 chars: {first_page_clean[:200]}\")\n",
     "\n",
-    "            # Priority 1: For Annex documents, prioritize first page\n",
-    "            if doc_type and doc_type.startswith(\"Annex\"):\n",
+    "            # Priority 1: For Legal documents, prioritize first page\n",
+    "            if doc_type and doc_type.startswith(\"Legal\"):\n",
     "                dates = parse_and_validate_dates(extract_date_strings(first_page_clean))\n",
     "                if dates:\n",
-    "                    selected_date = min(dates)  # Use earliest date for Annex\n",
-    "                    print(f\"Debug - Annex date selected: {selected_date}\")\n",
+    "                    selected_date = min(dates)  # Use earliest date for Legal Doc\n",
+    "                    print(f\"Debug - Legal date selected: {selected_date}\")\n",
     "                    return selected_date.strftime('%Y%m%d')\n",
     "        \n",
     "            # Priority 2: Look for effective date context\n",
@@ -292,8 +273,8 @@
     "\n",
     "def build_executed_filename_auto(filepath):\n",
     "    \"\"\"Build filename for executed documents\"\"\"\n",
-    "    vendor_names = rm_df['Vendor Name'].tolist()\n",
-    "    id_list = rm_df['Id'].astype(str).tolist()\n",
+    "    vendor_names = owner_df['Vendor'].tolist()\n",
+    "    id_list = owner_df['Id'].astype(str).tolist()\n",
     "    guessed_vendor = guess_vendor_from_filename_or_id(\n",
     "        os.path.basename(filepath), vendor_names, id_list\n",
     "    )\n",
