--- a/src/renaming-script.ipynb
+++ b/src/renaming-script.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9ad22251",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f64a93fd",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3975a907",
    "metadata": {},
    "outputs": [],
@@ -118,10 +118,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "cb749ae2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20250710-ABC-ABC & DEF Inc-Legal Document-JD\n"
+     ]
+    }
+   ],
    "source": [
     "def build_draft_filename_auto(filepath):\n",
     "    vendor_names = owner_df['Vendor'].tolist()\n",
@@ -133,7 +141,7 @@
     "    doc_type = detect_doc_type(os.path.basename(filepath))\n",
     "    owner_initials = get_owner_initials(guessed_vendor)\n",
     "    return f\"{draft_date}-ABC-{guessed_vendor}-{doc_type}-{owner_initials}\" # Alter this format as needed.\n",
-    "filepath = r\"\" #path to your file you'd like to rename\n",
+    "filepath = r\"C:\\Users\\I1000928\\Projects\\smart-document-renamer\\tests\\ABC Inc Legal.docx\" #path to your file you'd like to rename\n",
     "new_name = build_draft_filename_auto(filepath)\n",
     "print(new_name)"
    ]
