adding helpful notes, and more generalizng

--- a/src/renaming-script.ipynb
+++ b/src/renaming-script.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3975a907",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
     "\n",
     "def detect_doc_type(filename):  # if loops are in order of specificity to generality\n",
     "    name = filename.lower()\n",
-    "    if \"legal_a\" in name or \"legal_a\" in name:\n",
+    "    if \"legal a\" in name or \"legal_a\" in name:\n",
     "        return \"Legal Document A\"\n",
     "    elif \"legal\" in name or \"legal document\" in name:\n",
     "        return \"Legal Document\"\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "cb749ae2",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
     "    draft_date = get_last_modified_date(filepath)\n",
     "    doc_type = detect_doc_type(os.path.basename(filepath))\n",
     "    owner_initials = get_owner_initials(guessed_vendor)\n",
-    "    return f\"{draft_date}-ABC-{guessed_vendor}-{doc_type}-{owner_initials}\" # Alter this format as needed.\n",
+    "    return f\"{draft_date}-ORG-{guessed_vendor}-{doc_type}-{owner_initials}\" # Alter this format as needed.\n",
     "filepath = r\"C:\\Users\\I1000928\\Projects\\smart-document-renamer\\tests\\ABC Inc Legal.docx\" #path to your file you'd like to rename\n",
     "new_name = build_draft_filename_auto(filepath)\n",
     "print(new_name)"
@@ -164,7 +164,7 @@
     "#Extracting potential date strings with more specific formats\n",
     "def extract_date_strings(text):\n",
     "    patterns = [\n",
-    "        # ISO format dates (most reliable)\n",
+    "        # YYYY/MM/DD \n",
     "        r'\\b\\d{4}[-/]\\d{1,2}[-/]\\d{1,2}\\b',\n",
     "        # US format MM/DD/YYYY\n",
     "        r'\\b\\d{1,2}/\\d{1,2}/\\d{4}\\b',\n",
