--- a/src/renaming-script.ipynb
+++ b/src/renaming-script.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "9ad22251",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "f64a93fd",
    "metadata": {},
    "outputs": [],
@@ -56,12 +56,12 @@
    "id": "86be65bf",
    "metadata": {},
    "source": [
-    "Shared Utility Functions."
+    "Shared Utility Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "3975a907",
    "metadata": {},
    "outputs": [],
