--- a/src/renaming-script.ipynb
+++ b/src/renaming-script.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EXCEL_PATH = r\"C:\\Users\\I1000928\\Projects\\smart-document-renamer\\tests\\test_vendor_document.xlsx\" # Replace with the actual path to your Excel file\n",
+    "EXCEL_PATH = r\"test_vendor_document.xlsx" # Replace with the actual path to your Excel file\n",
     "owner_df = pd.read_excel(EXCEL_PATH, sheet_name=\"test_spreadsheet\", header=1) # Enter actual sheet name, change header to 0 if the first row is the header"
    ]
   },
