--- a/src/renaming-script.ipynb
+++ b/src/renaming-script.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "9ad22251",
    "metadata": {},
    "outputs": [],
@@ -42,12 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "f64a93fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "EXCEL_PATH = r\"test_vendor_document.xlsx" # Replace with the actual path to your Excel file\n,
+    "EXCEL_PATH = r\"C:\\Users\\I1000928\\Projects\\smart-document-renamer\\tests\\test_vendor_document.xlsx\" # Replace with the actual path to your Excel file\n",
     "owner_df = pd.read_excel(EXCEL_PATH, sheet_name=\"test_spreadsheet\", header=1) # Enter actual sheet name, change header to 0 if the first row is the header"
    ]
   },
